--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
   - go get golang.org/x/tools/cmd/cover
   - go get github.com/mattn/goveralls
 
-script:
+after_success:
   - $HOME/gopath/bin/goveralls -service=travis-ci
