--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_install:
   - go get github.com/mattn/goveralls
 
 after_success:
-  - $HOME/gopath/bin/goveralls -service=travis-ci
+  - travis_retry $HOME/gopath/bin/goveralls -service=travis-ci
